syntax = "proto3";
package org.streltsov.grpc;

message NumbersRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumbersResponse {
  int32 value = 1;
}

service NumbersService {
  rpc GenerateNumbers (NumbersRequest) returns (stream NumbersResponse) {}
}
